更新 header nav main scroll

--- a/app/index.html
+++ b/app/index.html
@@ -1,37 +1,21 @@
 ---
-title: 標題
-layout: ./app/layout.ejs
+title: 台北當代藝術展
+layout: ./app/assets/components/layout/layout.ejs
 engine: ejs
 current: index
 ---
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-8">
-      <div class="alert alert-primary" role="alert">
-        A simple primary alert—check it out!
-      </div>
-      <div class="alert alert-secondary" role="alert">
-        A simple secondary alert—check it out!
-      </div>
-      <div class="alert alert-success" role="alert">
-        A simple success alert—check it out!
-      </div>
-      <div class="alert alert-danger" role="alert">
-        A simple danger alert—check it out!
-      </div>
-      <div class="alert alert-warning" role="alert">
-        A simple warning alert—check it out!
-      </div>
-      <div class="alert alert-info" role="alert">
-        A simple info alert—check it out!
-      </div>
-      <div class="alert alert-light" role="alert">
-        A simple light alert—check it out!
-      </div>
-      <div class="alert alert-dark" role="alert">
-        A simple dark alert—check it out!
+<!-- <section class="banner bg-cover  <%= current !== 'index' ? 'd-none' : 'true' -%>">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h2 class="mb-2 fw-700">台北當代藝術展</h2>
+        <p class="fz-m fw-700 mb-4">01 JUN - 31 OCT</p>
+        <div class="d-flex">
+          <a href="javascript:;" class="btn btn-lg btn-secondary fz-base w-50 w-md-auto px-md-12 me-3 me-md-2">購買票券</a>
+          <a href="javascript:;" class="btn btn-lg btn-outline-white fz-base w-50 w-md-auto px-md-12">詳細資訊</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</section> -->
