--- a/app/index.html
+++ b/app/index.html
@@ -8,24 +8,22 @@ current: index
 <!--section ticket-->
 <section class="pt-15">
   <div class="container">
-    <ul class="list-unstyled">
+    <ul class="list-unstyled mb-0">
       <li>
-        <h2 class="ticket_firstTitle fs-5 fw-bolder mb-6 mx-0">熱門特展</h2>
+        <h2 class="fs-5 fw-bolder mb-6 mx-0">熱門特展</h2>
       </li>
       <li>
-        <div class="card mb-11 bg-gray-100">
-          <div class="row g-0">
+        <div class="card mb-5 bg-gray-100">
+          <div class="row g-0 pe-md-6">
             <div class="col-md-4 col-lg-4">
-              <img class="card_pic"
-                   src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg?raw=true"
-                   alt="">
+              <img class="card_pic" src="./assets/images/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" alt="">
             </div>
-            <div class="col-md-7 col-lg-7">
-              <div class="card-body py-10">
-                <h3 class="h5 card-title d-flex align-items-center fw-bolder mb-1 fs-2">2020 台味設計展
+            <div class="col-md-6">
+              <div class="card-body d-flex flex-column py-10 h-100">
+                <h3 class="h5 card-title d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">2020 台味設計展
                   <a href="#" class="card_hover py-2 ms-2"><i
                        class="card_icon fab fa-facebook  text-dark d-md-none"></i></a>
-                  <p class="card_sDate font-monospace d-md-none ms-auto fs-sm-5">01 JUN | 31 OCT</p>
+                  <p class="font-monospace d-md-none ms-auto fs-2">01 JUN | 31 OCT</p>
                 </h3>
                 <p class="fs-2 mb-2">$350</p>
                 <p class="card-text fs-2 mb-6">
@@ -36,11 +34,16 @@ current: index
                 </div>
               </div>
             </div>
-            <div class="col-md-1 col-lg-1">
-              <div class="card_footer h-100 d-flex flex-column justify-content-around align-items-center">
-                <p class="card_date font-monospace flex-wrap d-none d-md-block">01 JUN | 31 OCT</p>
-                <a href="#" class="card_hover py-2 "><i
-                     class="card_icon fab fa-facebook  text-dark d-none d-md-block"></i></a>
+            <div class="col-md-1 offset-md-1 justify-content-md-end align-items-center d-none d-md-flex my-md-10">
+              <div class="d-flex h-100 justify-content-center align-items-center align-items-md-start flex-md-column flex-row fw-bolder fs-2">
+                <p>01</p>
+                <p>JUN</p>
+                <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
+                <p>31</p>
+                <p>OCT</p>
+                <a href="#" class="py-2 mt-auto">
+                  <i class="card_icon fab fa-facebook  text-dark d-none d-md-block"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -48,16 +51,14 @@ current: index
       </li>
     
       <li>
-        <div class="card mb-11 bg-gray-100" style="max-width: 100%;">
-          <div class="row g-0">
+        <div class="card mb-5 bg-gray-100">
+          <div class="row g-0 pe-md-6">
             <div class="col-md-4 col-lg-4">
-              <img class="card_pic"
-                   src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg?raw=true"
-                   alt="">
+              <img class="card_pic" src="./assets/images/michel-catalisano--a0D9LpcKV8-unsplash.jpg" alt="">
             </div>
-            <div class="col-md-7 col-lg-7">
-              <div class="card-body py-10">
-                <h3 class="h5 card-title d-flex align-items-center fw-bolder mb-1 fs-2">No.22 線上設計展
+            <div class="col-md-6">
+              <div class="card-body d-flex flex-column py-10 h-100">
+                <h3 class="h5 card-title d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">No.22 線上設計展
                   <a href="#" class="card_hover py-2 ms-2"><i
                        class="card_icon fab fa-facebook  text-dark d-md-none"></i></a>
                   <p class="card_sDate font-monospace d-md-none ms-auto fs-2">01 JUN | 31 OCT</p>
@@ -66,16 +67,21 @@ current: index
                 <p class="card-text fs-2 mb-6">
                   這是一個專屬於設計系畢業生的展覽，沒有華麗的名號、沒有浮誇的獎賞。讓我們用作品與理念，去碰撞真實世界裡的各種問題，創造更多美好的人事物。讓這個地球、這個世界變成每一個人心目中的理想鄉。</p>
                 <div class="card_btn d-flex">
-                  <button type="button" class=" btn btn-primary me-2">購買票券</button>
-                  <button type="button" class=" btn btn-outline-primary">詳細資訊</button>
+                  <button type="button" class="btn btn-primary me-2">購買票券</button>
+                  <button type="button" class="btn btn-outline-primary">詳細資訊</button>
                 </div>
               </div>
             </div>
-            <div class="col-md-1 col-lg-1">
-              <div class="card_footer h-100 d-flex flex-column justify-content-around align-items-center">
-                <p class="card_date font-monospace flex-wrap d-none d-md-block">01 JUN | 31 OCT</p>
-                <a href="#" class="card_hover py-2"><i
-                     class="card_icon fab fa-facebook text-dark d-none d-md-block"></i></a>
+            <div class="col-md-1 offset-md-1 justify-content-md-end align-items-center d-none d-md-flex my-md-10">
+              <div class="d-flex h-100 justify-content-center align-items-center align-items-md-start flex-md-column flex-row fw-bolder fs-2">
+                <p>01</p>
+                <p>JUN</p>
+                <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
+                <p>31</p>
+                <p>OCT</p>
+                <a href="#" class="py-2 mt-auto">
+                  <i class="card_icon fab fa-facebook text-dark d-none d-md-block"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -83,16 +89,16 @@ current: index
       </li>
     
       <li>
-        <div class="card bg-gray-100" style="max-width: 100%;">
-          <div class="row g-0">
+        <div class="card bg-gray-100">
+          <div class="row g-0 pe-md-6">
             <div class="col-md-4 col-lg-4">
               <img class="card_pic"
-                   src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/moralis-tsai-8xsktFRw28I-unsplash.jpg?raw=true"
+                   src="./assets/images/moralis-tsai-8xsktFRw28I-unsplash.jpg"
                    alt="">
             </div>
-            <div class="col-md-7 col-lg-7">
-              <div class="card-body py-10">
-                <h3 class="h5 card-title d-flex align-items-center fw-bolder mb-1 fs-2">高雄設計節
+            <div class="col-md-6">
+              <div class="card-body d-flex flex-column py-10 h-100">
+                <h3 class="h5 card-title d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">高雄設計節
                   <a href="#" class="card_hover py-2 ms-2"><i
                        class="card_icon fab fa-facebook  text-dark d-md-none"></i></a>
                   <p class="card_sDate font-monospace d-md-none ms-auto fs-2">01 JUN | 31 OCT</p>
@@ -106,15 +112,21 @@ current: index
                 </div>
               </div>
             </div>
-            <div class="col-md-1 col-lg-1">
-              <div class="card_footer h-100 d-flex flex-column justify-content-around align-items-center">
-                <p class="card_date font-monospace flex-wrap d-none d-md-block">01 JUN | 31 OCT</p>
-                <a href="#" class="card_hover"><i class="card_icon fab fa-facebook text-dark d-none d-md-block"></i></a>
+            <div class="col-md-1 offset-md-1 justify-content-md-end align-items-center d-none d-md-flex my-md-10">
+              <div class="d-flex h-100 justify-content-center align-items-center align-items-md-start flex-md-column flex-row fw-bolder fs-2">
+                <p>01</p>
+                <p>JUN</p>
+                <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
+                <p>31</p>
+                <p>OCT</p>
+                <a href="#" class="py-2 mt-auto">
+                  <i class="card_icon fab fa-facebook  text-dark d-none d-md-block"></i>
+                </a>
               </div>
-            </div>
           </div>
         </div>
       </li>
+
     </ul>
   </div>
 </section>
@@ -124,21 +136,18 @@ current: index
   <section class="back">
     <h2 class="fs-4 fw-bolder mb-4 mx-0">直播回顧</h2>
     <div class="back_bgpic bg-cover">
-      <div class="row">
+      <div class="row g-md-0">
         <div class="col-md-5 col back_bg2 bg-cover">
-          <div class="py-13 ps-4">
+          <div class="py-13 px-6">
             <div class="mb-6">
               <h3 class="fs-4 fw-bolder text-white">開幕對談 | 藝術展演巡禮</h3>
             </div>
-            <div class="mb-8">
-              <img class="back_people"
-                   src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/people.png?raw=true"
-                   alt="">
+            <div class="mb-3">
+              <img class="back_people" src="./assets/images/people.png" alt="">
             </div>
-            <div class="text-white mb-6">
-              <h4 class="mb-2 fs-2 fw-light">臺北現代聯合總監｜Ken Hsu</h4>
-              <p class="d-none d-sm-block d-md-none fw-light">獨家由藝術家、策展人、畫廊總監帶您欣賞<br>台北藝術特展，感受雕塑、展演及當代日常<br>文化之間微妙的關係。</p>
-              <p class="d-sm-none d-md-block fw-light">獨家由藝術家、策展人、畫廊總監帶您欣賞台北藝術特展，感受雕塑、展演及當代日常文化之間微妙的關係。</p>
+            <div class="text-white mb-4 fs-2">
+              <h4 class="mb-2 fw-light">臺北現代聯合總監｜Ken Hsu</h4>
+              <p class="fw-light">獨家由藝術家、策展人、畫廊總監帶您欣賞台北藝術特展，感受雕塑、展演及當代日常文化之間微妙的關係。</p>
             </div>
             <div>
               <a href="#" type="button" class="back_btn btn btn-secondary">點此觀看</a>
