--- a/app/index.html
+++ b/app/index.html
@@ -13,18 +13,21 @@ current: index
         <h2 class="fs-5 fw-bolder mb-6 mx-0">熱門特展</h2>
       </li>
       <li>
-        <div class="card mb-5 bg-gray-100">
+        <div class="card mb-5 bg-gray-100 px-15o py-6 p-md-0">
           <div class="row g-0 pe-md-6">
             <div class="col-md-4 col-lg-4">
               <img class="card_pic" src="./assets/images/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" alt="">
             </div>
             <div class="col-md-6">
-              <div class="card-body d-flex flex-column py-10 h-100">
-                <h3 class="h5 card-title d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">2020 台味設計展
-                  <a href="#" class="card_hover py-2 ms-2"><i
-                       class="card_icon fab fa-facebook  text-dark d-md-none"></i></a>
-                  <p class="font-monospace d-md-none ms-auto fs-2">01 JUN | 31 OCT</p>
-                </h3>
+              <div class="card-body d-flex flex-column px-0 pb-0 py-md-10 h-100">
+                <div class="d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">
+                  <h3 class="card-title d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">
+                    2020 台味設計展</h3>
+                  <a href="#" class="card_hover py-2 ms-2">
+                    <i class="card_icon fab fa-facebook text-dark d-md-none"></i>
+                  </a>
+                  <p class="card_sDate font-monospace d-md-none ms-auto fs-1">01 JUN | 31 OCT</p>
+                </div>
                 <p class="fs-2 mb-2">$350</p>
                 <p class="card-text fs-2 mb-6">
                   一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>
@@ -35,7 +38,8 @@ current: index
               </div>
             </div>
             <div class="col-md-1 offset-md-1 justify-content-md-end align-items-center d-none d-md-flex my-md-10">
-              <div class="d-flex h-100 justify-content-center align-items-center align-items-md-start flex-md-column flex-row fw-bolder fs-2">
+              <div
+                   class="d-flex h-100 justify-content-center align-items-center align-items-md-start flex-md-column flex-row fw-bolder fs-2">
                 <p>01</p>
                 <p>JUN</p>
                 <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
@@ -49,23 +53,25 @@ current: index
           </div>
         </div>
       </li>
-    
+
       <li>
-        <div class="card mb-5 bg-gray-100">
+        <div class="card mb-5 bg-gray-100 px-15o py-6 p-md-0">
           <div class="row g-0 pe-md-6">
             <div class="col-md-4 col-lg-4">
               <img class="card_pic" src="./assets/images/michel-catalisano--a0D9LpcKV8-unsplash.jpg" alt="">
             </div>
             <div class="col-md-6">
-              <div class="card-body d-flex flex-column py-10 h-100">
-                <h3 class="h5 card-title d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">No.22 線上設計展
-                  <a href="#" class="card_hover py-2 ms-2"><i
-                       class="card_icon fab fa-facebook  text-dark d-md-none"></i></a>
-                  <p class="card_sDate font-monospace d-md-none ms-auto fs-2">01 JUN | 31 OCT</p>
-                </h3>
+              <div class="card-body d-flex flex-column px-15o pt-2 pb-6 py-md-10 h-100">
+                <div class="d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">
+                  <h3 class="card-title d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">
+                      高雄設計節</h3>
+                  <a href="#" class="card_hover py-2 ms-2">
+                    <i class="card_icon fab fa-facebook text-dark d-md-none"></i>
+                  </a>
+                  <p class="card_sDate font-monospace d-md-none ms-auto fs-1">01 JUN | 31 OCT</p>
+                </div>
                 <p class="fs-2 mb-2">$350</p>
-                <p class="card-text fs-2 mb-6">
-                  這是一個專屬於設計系畢業生的展覽，沒有華麗的名號、沒有浮誇的獎賞。讓我們用作品與理念，去碰撞真實世界裡的各種問題，創造更多美好的人事物。讓這個地球、這個世界變成每一個人心目中的理想鄉。</p>
+                <p class="card-text fs-2 mb-6">設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
                 <div class="card_btn d-flex">
                   <button type="button" class="btn btn-primary me-2">購買票券</button>
                   <button type="button" class="btn btn-outline-primary">詳細資訊</button>
@@ -73,7 +79,8 @@ current: index
               </div>
             </div>
             <div class="col-md-1 offset-md-1 justify-content-md-end align-items-center d-none d-md-flex my-md-10">
-              <div class="d-flex h-100 justify-content-center align-items-center align-items-md-start flex-md-column flex-row fw-bolder fs-2">
+              <div
+                   class="d-flex h-100 justify-content-center align-items-center align-items-md-start flex-md-column flex-row fw-bolder fs-2">
                 <p>01</p>
                 <p>JUN</p>
                 <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
@@ -87,22 +94,23 @@ current: index
           </div>
         </div>
       </li>
-    
+
       <li>
-        <div class="card bg-gray-100">
+        <div class="card mb-5 bg-gray-100 px-15o py-6 p-md-0">
           <div class="row g-0 pe-md-6">
             <div class="col-md-4 col-lg-4">
-              <img class="card_pic"
-                   src="./assets/images/moralis-tsai-8xsktFRw28I-unsplash.jpg"
-                   alt="">
+              <img class="card_pic" src="./assets/images/moralis-tsai-8xsktFRw28I-unsplash.jpg" alt="">
             </div>
             <div class="col-md-6">
-              <div class="card-body d-flex flex-column py-10 h-100">
-                <h3 class="h5 card-title d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">高雄設計節
-                  <a href="#" class="card_hover py-2 ms-2"><i
-                       class="card_icon fab fa-facebook  text-dark d-md-none"></i></a>
-                  <p class="card_sDate font-monospace d-md-none ms-auto fs-2">01 JUN | 31 OCT</p>
-                </h3>
+              <div class="card-body d-flex flex-column px-0 pb-0 py-md-10 h-100">
+                <div class="d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">
+                  <h3 class="card-title d-flex align-items-center justify-content-md-between h-100 fw-bolder mb-1 fs-2">
+                    高雄設計節</h3>
+                  <a href="#" class="card_hover py-2 ms-2">
+                    <i class="card_icon fab fa-facebook text-dark d-md-none"></i>
+                  </a>
+                  <p class="card_sDate font-monospace d-md-none ms-auto fs-1">01 JUN | 31 OCT</p>
+                </div>
                 <p class="fs-2 mb-2">$350</p>
                 <p class="card-text fs-2 mb-6">
                   設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
@@ -113,7 +121,8 @@ current: index
               </div>
             </div>
             <div class="col-md-1 offset-md-1 justify-content-md-end align-items-center d-none d-md-flex my-md-10">
-              <div class="d-flex h-100 justify-content-center align-items-center align-items-md-start flex-md-column flex-row fw-bolder fs-2">
+              <div
+                   class="d-flex h-100 justify-content-center align-items-center align-items-md-start flex-md-column flex-row fw-bolder fs-2">
                 <p>01</p>
                 <p>JUN</p>
                 <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
@@ -123,6 +132,7 @@ current: index
                   <i class="card_icon fab fa-facebook  text-dark d-none d-md-block"></i>
                 </a>
               </div>
+            </div>
           </div>
         </div>
       </li>
