--- a/app/design.html
+++ b/app/design.html
@@ -5,74 +5,70 @@ engine: ejs
 current: design
 ---
 <section>
-
   <ul class="d-flex flex-column position-relative list-unstyled">
     <li class="bg-primary py-11">
       <div class="container">
         <div class="row">
-          <div class="col-lg-5 col-xl-5">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg?raw=true"
-                 alt="展覽照片">
+          <div class="col-lg-5">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg?raw=true" alt="展覽照片">
           </div>
-          <div class="d-flex align-items-center align-items-md-start flex-md-column flex-row pt-4 pb-2 pt-md-20 pb-md-13 col-lg-1 col-xl-1 text-white fw-bolder fs-2">
-            <p>01
-            <p>JUN
-            <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|
+          <div class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-white fw-bolder fs-2">
+            <p>01</p>
+            <p>JUN</p>
+            <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
             <p>31</p>
             <p>OCT</p>
           </div>
-          <div class="col-lg-4 col-xl-4 order-lg-first">
-            <h1 class="fs-36o fw-bolder text-white mb-2 mb-lg-4 mb-xl-4"><a href="#"
-                 class="text-white ">2020 台味設計展</a></h1>
+          <div class="col-lg-4 order-lg-first">
+            <h2 class="fs-36o fw-bolder text-white mb-2 mb-lg-4">
+              <a href="#" class="text-white ">2020 台味設計展</a></h2>
             <p class="text-white">一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>
           </div>
         </div>
       </div>
     </li>
-
     <li class="py-11">
       <div class="container">
         <div class="row justify-content-lg-end">
-          <div class="col-lg-5 col-xl-5">
+          <div class="col-lg-5">
             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg?raw=true"
                  alt="展覽照片">
           </div>
-          <div class="d-flex align-items-center align-items-md-start flex-md-column flex-row pt-4 pb-2 pt-md-20 pb-md-13 col-lg-1 col-xl-1 text-primary fw-bolder fs-2 position-relative">
-            <p>01
-            <p>JUN
-            <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|
+          <div class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-primary fw-bolder fs-2">
+            <p>01</p>
+            <p>JUN</p>
+            <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
             <p>31</p>
             <p>OCT</p>
           </div>
-          <div class="col-lg-4 col-xl-4 order-lg-first">
-            <h2 class="fs-36o fw-bolder text-primary mb-2 mb-lg-4 mb-xl-4"><a href="#"
-                 class="text-primary">No.22 線上設計展</a></h2>
+          <div class="col-lg-4 order-lg-first">
+            <h2 class="fs-36o fw-bolder text-primary mb-2 mb-lg-4">
+              <a href="#" class="text-primary">No.22 線上設計展</a>
+            </h2>
             <p class="text-primary">
               這是一個專屬於設計系畢業生的展覽，沒有華麗的名號、沒有浮誇的獎賞。讓我們用作品與理念，去碰撞真實世界裡的各種問題，創造更多美好的人事物。讓這個地球、這個世界變成每一個人心目中的理想鄉。</p>
           </div>
         </div>
       </div>
     </li>
-
     <li class="bg-primary py-11">
       <div class="container">
         <div class="row">
-          <div class="col-lg-5 col-xl-5">
+          <div class="col-lg-5">
             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/moralis-tsai-8xsktFRw28I-unsplash.jpg?raw=true"
                  alt="展覽照片">
           </div>
-          <div class="d-flex align-items-center align-items-md-start flex-md-column flex-row pt-4 pb-2 pt-md-20 pb-md-13 col-lg-1 col-xl-1 text-white fw-bolder fs-2 position-relative ">
-            <p>01
-            <p>JUN
-            <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|
+          <div class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-white fw-bolder fs-2">
+            <p>01</p>
+            <p>JUN</p>
+            <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
             <p>31</p>
             <p>OCT</p>
           </div>
-          <div class="col-lg-4 col-xl-4 order-lg-first">
-            <h2 class="fs-36o fw-bolder text-white mb-2 mb-lg-4 mb-xl-4"><a href="#"
-                 class="text-white ">高雄設計節</a></h2>
-            <p class="text-white">
-              設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
+          <div class="col-lg-4 order-lg-first">
+            <h2 class="fs-36o fw-bolder text-white mb-2 mb-lg-4">
+              <a href="#" class="text-white ">高雄設計節</a></h2>
+            <p class="text-white">設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
           </div>
         </div>
       </div>
