--- a/app/design.html
+++ b/app/design.html
@@ -10,9 +10,13 @@ current: design
       <div class="container">
         <div class="row">
           <div class="col-lg-5">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg?raw=true" alt="展覽照片">
+            <a href="./detail.html">
+              <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg?raw=true"
+                   alt="展覽照片">
+            </a>
           </div>
-          <div class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-white fw-bolder fs-2">
+          <div
+               class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-white fw-bolder fs-2">
             <p>01</p>
             <p>JUN</p>
             <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
@@ -21,7 +25,8 @@ current: design
           </div>
           <div class="col-lg-4 order-lg-first">
             <h2 class="fs-36o fw-bolder text-white mb-2 mb-lg-4">
-              <a href="#" class="text-white ">2020 台味設計展</a></h2>
+              <a href="#" class="text-white ">2020 台味設計展</a>
+            </h2>
             <p class="text-white">一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>
           </div>
         </div>
@@ -34,7 +39,8 @@ current: design
             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg?raw=true"
                  alt="展覽照片">
           </div>
-          <div class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-primary fw-bolder fs-2">
+          <div
+               class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-primary fw-bolder fs-2">
             <p>01</p>
             <p>JUN</p>
             <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
@@ -58,7 +64,8 @@ current: design
             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/moralis-tsai-8xsktFRw28I-unsplash.jpg?raw=true"
                  alt="展覽照片">
           </div>
-          <div class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-white fw-bolder fs-2">
+          <div
+               class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-white fw-bolder fs-2">
             <p>01</p>
             <p>JUN</p>
             <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
@@ -67,8 +74,10 @@ current: design
           </div>
           <div class="col-lg-4 order-lg-first">
             <h2 class="fs-36o fw-bolder text-white mb-2 mb-lg-4">
-              <a href="#" class="text-white ">高雄設計節</a></h2>
-            <p class="text-white">設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
+              <a href="#" class="text-white ">高雄設計節</a>
+            </h2>
+            <p class="text-white">
+              設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
           </div>
         </div>
       </div>
