--- a/app/design.html
+++ b/app/design.html
@@ -36,8 +36,10 @@ current: design
       <div class="container">
         <div class="row justify-content-lg-end">
           <div class="col-lg-5">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg?raw=true"
-                 alt="展覽照片">
+            <a href="./detail.html">
+              <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg?raw=true"
+                   alt="展覽照片">
+            </a>
           </div>
           <div
                class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-primary fw-bolder fs-2">
@@ -61,25 +63,27 @@ current: design
       <div class="container">
         <div class="row">
           <div class="col-lg-5">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/moralis-tsai-8xsktFRw28I-unsplash.jpg?raw=true"
-                 alt="展覽照片">
+            <a href="./detail.html">
+              <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/exhibition-week6/moralis-tsai-8xsktFRw28I-unsplash.jpg?raw=true"
+                   alt="展覽照片">
+            </a>
           </div>
-          <div
-               class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-white fw-bolder fs-2">
-            <p>01</p>
-            <p>JUN</p>
-            <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
-            <p>31</p>
-            <p>OCT</p>
-          </div>
-          <div class="col-lg-4 order-lg-first">
-            <h2 class="fs-36o fw-bolder text-white mb-2 mb-lg-4">
-              <a href="#" class="text-white ">高雄設計節</a>
-            </h2>
-            <p class="text-white">
-              設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
-          </div>
+        <div
+             class="d-flex align-items-center align-items-lg-start flex-lg-column flex-row pt-4 pb-2 pt-lg-20 pb-lg-13 col-lg-1 text-white fw-bolder fs-2">
+          <p>01</p>
+          <p>JUN</p>
+          <p class="me-md-1 ms-1 me-0 ms-md-0 wrm-lr wrm-md-tb">|</p>
+          <p>31</p>
+          <p>OCT</p>
         </div>
+        <div class="col-lg-4 order-lg-first">
+          <h2 class="fs-36o fw-bolder text-white mb-2 mb-lg-4">
+            <a href="#" class="text-white ">高雄設計節</a>
+          </h2>
+          <p class="text-white">
+            設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
+        </div>
+      </div>
       </div>
     </li>
   </ul>
