--- a/app/detail.html
+++ b/app/detail.html
@@ -24,12 +24,13 @@ current: detail
           <div class="event-content mt-10o position-relative">
             <div class="d-flex justify-content-between align-items-center mb-2 mb-lg-1">
               <h2 class="fs-2 mb-0">2020 台味設計展 <i class="fab fa-facebook text-dark"></i></h2>
-              <div class="event-time fw-bolder text-dark text-lg-white fs-xs fs-lg-2 d-flex d-lg-block align-items-center ">
-                <p class="">01</p>
-                <p class="">JUN</p>
+              <div
+                   class="event-time fw-bolder text-dark text-lg-white fs-xs fs-lg-2 d-flex d-lg-block align-items-center ">
+                <p>01</p>
+                <p>JUN</p>
                 <p class="wrm-lr wrm-lg-unset mx-0">|</p>
-                <p class="">31</p>
-                <p class="">OCT</p>
+                <p>31</p>
+                <p>OCT</p>
               </div>
             </div>
             <p>一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>
@@ -37,7 +38,8 @@ current: detail
         </div>
         <div class="col-lg-6">
           <div class="row mb-11">
-            <div class="col-lg-6 num-group d-flex justify-content-center flex-column border-end-0 border-end-lg border-lg-2">
+            <div
+                 class="col-lg-6 num-group d-flex justify-content-center flex-column border-end-0 border-end-lg border-lg-2">
               <div class="d-flex justify-content-center align-items-center mb-6">
                 <a href="#"><span class="material-icons me-10 text-dark">remove</span></a>
                 <p class="fs-6 fw-bold">01</p>
@@ -51,9 +53,9 @@ current: detail
               </div>
               <p class="text-center mb-2">票種</p>
               <div class="price-type-group d-flex justify-content-center">
-                <a class="text-dark px-7" href="#">學生</a>
-                <a class="text-dark px-7 active" href="#">全票</a>
-                <a class="text-dark px-7" href="#">愛心</a>
+                <a class="text-dark px-5" href="#">學生</a>
+                <a class="text-dark px-5 active" href="#">全票</a>
+                <a class="text-dark px-5" href="#">愛心</a>
               </div>
             </div>
           </div>
@@ -79,14 +81,16 @@ current: detail
         <div class="col-lg-8 order-first order-lg-0">
           <div>
             <h2 class="fw-bold fs-2 mb-1">藝饗宴</h2>
-            <h3 class="fw-bold fs-2 mb-3">​Celebration of Style and Art</h3>
-           <div class="text-gray-600 fw-light">
-              <p class="mb-4">匯集美、日、臺等地的藝術家與時尚設計師的作品。以跨界跨域的潮流文化為軸心，結合街頭塗鴉、時尚文化、名牌符號等，藉由各自特殊的表現語彙，傳達對社會當下流行文化的自我反嘲。然而這些深受大眾喜愛的藝術家，也讓「時尚」的概念不再扁平單一，相反的，他們展現了對社會更具魅力的反思，也提出了對於潮文化的自我觀點。</p>
+            <h3 class="fw-bold fs-2 mb-3">Celebration of Style and Art</h3>
+            <div class="text-gray-600 fw-light">
+              <p class="mb-4">
+                匯集美、日、臺等地的藝術家與時尚設計師的作品。以跨界跨域的潮流文化為軸心，結合街頭塗鴉、時尚文化、名牌符號等，藉由各自特殊的表現語彙，傳達對社會當下流行文化的自我反嘲。然而這些深受大眾喜愛的藝術家，也讓「時尚」的概念不再扁平單一，相反的，他們展現了對社會更具魅力的反思，也提出了對於潮文化的自我觀點。
+              </p>
               <p class="mb-4">從臺灣前輩藝術家林淵、國際知名的超扁平藝術家村上隆、臺灣彩繪雕塑家洪易、以及當代新玩具雕塑代表Kaws
-              等，都受到許多收藏家的喜愛，同時也是當代藝術史上重要的一員。在這個展區，向藏家借展的作品都是一時之選，也反映出街頭藝術發展的某一種共性。另外，在與時尚跨界的藝術表現上，有永遠嘲諷時尚卻很時尚的藝術家Death
-              NYC、臺灣新銳服裝設計師吳日云、尋找鎂光燈背後那真實藝術家身分的郭彥甫、年輕雕塑家賴冠仲、橫跨藝術與時尚設計師雙重身分的雙人組陳薇與李崇德、創造出療癒角色俊寶Zunbo
-              的韓國設計團隊Sakubo，以及日本藝術家喜久田尚美、南館麻美子等。展區透過空間的裝置與時尚語彙，完美詮釋了藝術、設計與潮流文化的多元樣貌。</p>
-           </div>
+                等，都受到許多收藏家的喜愛，同時也是當代藝術史上重要的一員。在這個展區，向藏家借展的作品都是一時之選，也反映出街頭藝術發展的某一種共性。另外，在與時尚跨界的藝術表現上，有永遠嘲諷時尚卻很時尚的藝術家Death
+                NYC、臺灣新銳服裝設計師吳日云、尋找鎂光燈背後那真實藝術家身分的郭彥甫、年輕雕塑家賴冠仲、橫跨藝術與時尚設計師雙重身分的雙人組陳薇與李崇德、創造出療癒角色俊寶Zunbo
+                的韓國設計團隊Sakubo，以及日本藝術家喜久田尚美、南館麻美子等。展區透過空間的裝置與時尚語彙，完美詮釋了藝術、設計與潮流文化的多元樣貌。</p>
+            </div>
           </div>
         </div>
       </div>
