--- a/app/index.html
+++ b/app/index.html
@@ -160,7 +160,7 @@ current: index
               <p class="fw-light">獨家由藝術家、策展人、畫廊總監帶您欣賞台北藝術特展，感受雕塑、展演及當代日常文化之間微妙的關係。</p>
             </div>
             <div>
-              <a href="#" type="button" class="back_btn btn btn-secondary">點此觀看</a>
+              <a href="#" class="btn back_btn btn-secondary">點此觀看</a>
             </div>
           </div>
         </div>
